fix: paymnets & subscriptions stores refactoring
