# src/features/tonapi/tier/model/interfaces/ton-api-payment.ts
@@ -1,0 +1,11 @@
+import { TonApiTier } from './ton-api-tier';
+import { CurrencyAmount } from 'src/shared';
+
+export interface TonApiPayment {
+    id: string;
+    tier: TonApiTier;
+
+    amount: CurrencyAmount;
+
+    date: Date;
+}
